# cpp-neural-network

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: core.cpp.C10C56439E3B6A4C.idx  core.h.9703366883731E25.idx  main.cpp.9BA7DA5A4F24D23A.idx  tests.cpp.0206EEA184802CD8.idx
include/: tensor.h
src/: core.cpp  main.cpp  tensor.cpp
tests/: tests.cpp
